docs: add blog post for pecr

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,5 +1,5 @@
 sbd_community:
-  name: SBDC Handbook Community
-  title: Contributor
-  url: https://github.com/sbd-community/handbook
+  name: SBD Community
+  title: Maintainer
+  url: https://github.com/sbd-community
   image_url: https://github.com/sbd-community.png
