--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@docusaurus/module-type-aliases": "3.8.1",
     "@docusaurus/tsconfig": "3.8.1",
     "@docusaurus/types": "3.8.1",
+    "sharp": "^0.34.4",
     "typescript": "~5.6.2"
   },
   "browserslist": {
